--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-spinners": "^0.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
