--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "lodash": "^4.17.21",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "deploy": "aws s3 sync build/ s3://loweffortmemes.com --acl public-read",
+    "deploy": "aws s3 sync build/ s3://lowereffortmemes --acl public-read",
     "clean": "npx prettier --write src/*.ts *.json src/*.tsx public/ src/components/*",
     "build": "react-scripts build",
     "test": "react-scripts test",
