--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "lodash": "^4.17.21",
+    "node-sass": "^4.14.1",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
+    "react-bootstrap": "^2.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
